kubernetes/infrastructure/traefik/argocd-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.nihalxkumar.dev`)
      kind: Rule
      services:
        - name: argocd-server
          namespace: argocd
          port: 80
  tls:
    secretName: nihalxkumar-dev-tls
